<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>kendzi.kendzi3d</groupId>
	<artifactId>kendzi3d-parent</artifactId>
	<version>1.0.200-SNAPSHOT</version>
	<packaging>pom</packaging>

	<url>http://www.openstreetmap.org.pl/kendzi/Kendzi3d/</url>
	
	
	<scm>
		<connection>scm:git:git@github.com/kendzi/kendzi3d.git</connection>
		<developerConnection>scm:git:git@github.com:kendzi/kendzi3d.git</developerConnection>
		<url>http://github.com/kendzi/kendzi3d</url>
  	  <tag>HEAD</tag>
  </scm>
	<distributionManagement>
		<repository>
			<id>zibi-ftp-repository</id>
			<url>ftp://kendzi@zibi.openstreetmap.org.pl/k/repo</url>
		</repository>
	</distributionManagement>

	<properties>
		<java.version>1.8</java.version>
		<vecmath.version>1.3.1</vecmath.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>4.12</junit.version>
		<log4j.version>1.2.17</log4j.version>
		<slf4j.version>1.7.25</slf4j.version>
		<guice.version>4.1.0</guice.version>
		<inject.version>1</inject.version>
		
		<jogl.version>2.3.2</jogl.version>
		<gluegen.version>2.3.2</gluegen.version>
		
		<kendzi.math.version>0.0.12</kendzi.math.version>
		<kendzi3d-resources.version>0.0.1</kendzi3d-resources.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- artifact from jsom repository -->
				<groupId>org.openstreetmap.josm</groupId>
				<artifactId>josm</artifactId>
				<version>SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.jogamp.jogl</groupId>
				<artifactId>jogl-all-main</artifactId>
				<version>${jogl.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jogamp.gluegen</groupId>
				<artifactId>gluegen-rt-main</artifactId>
				<version>${gluegen.version}</version>
			</dependency>
			<dependency>
				<groupId>kendzi.kendzi3d</groupId>
				<artifactId>kendzi3d-resources</artifactId>
				<version>${kendzi3d-resources.version}</version>
			</dependency>
			<dependency>
				<groupId>kendzi.kendzi3d</groupId>
				<artifactId>josm-jogl</artifactId>
				<version>1.1.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>		
		
		<dependency>
			<!-- artifact in local repo -->
			<groupId>org.poly2tri</groupId>
			<artifactId>poly2tri-core</artifactId>
			<version>0.1.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	
	<modules>
		<module>kendzi-util</module>

		<module>kendzi3d-math</module>
		<module>kendzi3d-resource-interface</module>
		<module>kendzi3d-josm-core</module>

		<module>kendzi3d-buildings</module>
		<module>kendzi3d-buildings-josm</module>

		<module>kendzi3d-expressions</module>

		<module>kendzi3d-jogl-util</module>
		<module>kendzi3d-jogl-example</module>

		<module>kendzi3d-jogl-model</module>
		<module>kendzi3d-jogl-model-render</module>
		<module>kendzi3d-jogl-model-util</module>

		<module>kendzi3d-jogl-textures</module>
		<module>kendzi3d-jogl-textures-josm</module>
		<module>kendzi3d-jogl-textures-library</module>
		<module>kendzi3d-jogl-textures-library-bindings</module>
		<module>kendzi3d-jogl-textures-library-res</module>
		
		<!-- Because of bug in java 8 there is no easy way to make correct bindings.
		https://java.net/jira/browse/JAXB-986
		Don't want to play with work around, simply use old version. -->
		<!-- <module>kendzi3d-collada-bindings</module> -->
		<module>kendzi3d-collada-exporter</module>

		<module>kendzi3d-models-library</module>
		<module>kendzi3d-models-library-bindings</module>
		<module>kendzi3d-models-library-layer</module>
		<module>kendzi3d-models-library-josm</module>
		<module>kendzi3d-models-library-res</module>

		<module>kendzi3d-resource-manager</module>
		<module>kendzi3d-light</module>

		<module>kendzi3d-editor</module>
		<module>kendzi3d-world-model</module>
		
		<module>kendzi3d-plugin</module>
		<module>kendzi3d-plugin-build</module>
		
		<module>kendzi3d-buildings-example</module>
	</modules>
	
	<repositories>
		<repository>
			<id>josm_repo</id>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>https://josm.openstreetmap.de/nexus/content/repositories/public/</url>
		</repository>
		
		<repository>
			<id>repo_remote</id>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>http://zibi.openstreetmap.org.pl/kendzi/k/repo/</url>
		</repository>
	
		<repository>
			<id>repo_local</id>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>file://${project.basedir}/repo</url>
		</repository>
	</repositories>
	
	<build>
		<extensions>
			<!-- Enabling the use of FTP -->
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>2.5</version>
			</extension>
		</extensions>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<localCheckout>true</localCheckout>
					<pushChanges>false</pushChanges>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<!-- No validation for javadoc. -->
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
